<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/me_order_list"
        android:layout_width="match_parent"
        android:layout_height="73dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/delivered"
                android:id="@+id/imageView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:layout_marginTop="6dp"
                android:textColor="#666666"
                android:text="@string/obligation" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/delivered"
                android:id="@+id/imageView3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:layout_marginTop="6dp"
                android:textColor="#666666"
                android:text="@string/check_pending" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/delivered"
                android:id="@+id/imageView4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:layout_marginTop="6dp"
                android:textColor="#666666"
                android:text="@string/in_production" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="26dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:background="@drawable/delivered"
                android:id="@+id/imageView5" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView5"
                android:layout_centerHorizontal="true"
                android:textSize="12dp"
                android:layout_marginTop="6dp"
                android:textColor="#666666"
                android:text="@string/delivered" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/me_order_list"
        android:background="#ECECEC"/>
</RelativeLayout>
