<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="51dp"
    android:orientation="horizontal"
    android:alpha="0.8"
    android:layout_alignParentBottom="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/home_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="9dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/home_highlight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/home_icon"
            android:text="@string/homepage"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:textColor="#b4a078"
            tools:ignore="SmallSp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/classify"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/classify_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="9dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/home_highlight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/classify_icon"
            android:text="@string/classify"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:textColor="#b4a078"
            tools:ignore="SmallSp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/plus_icon"
            android:layout_width="47dp"
            android:layout_height="39dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/plus_highlight"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15.5dp"
            android:layout_marginBottom="15.5dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/plus_highlight_inside"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/special"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/special_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="9dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/home_highlight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/special_icon"
            android:text="@string/special"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:textColor="#b4a078"
            tools:ignore="SmallSp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/me"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/me_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="9dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/home_highlight"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@+id/me_icon"
            android:text="@string/me"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:textColor="#b4a078"
            tools:ignore="SmallSp"/>
    </RelativeLayout>
</LinearLayout>
